fixing squishing of team member photos

--- a/assets/css/_components/team-members.scss
+++ b/assets/css/_components/team-members.scss
@@ -27,6 +27,7 @@
 
 .team-members__member-content {
   margin-left: 25px;
+  flex: 1;
 }
 
 .team-members__member-name {
